@@ -118,6 +118,8 @@ $_lang['perm.settings_desc'] = 'To view and edit any System Settings.';
 $_lang['perm.steal_lock_desc'] = 'To "steal", or remove, a lock from a Resource.';
 $_lang['perm.steal_locks_desc'] = 'To "steal" locks, overriding a current lock on a Resource.';
 $_lang['perm.undelete_desc'] = 'Basic permission to "undelete" any object.';
+$_lang['perm.tree_show_resource_ids_desc'] = 'Show the IDs in the Resource tree.';
+$_lang['perm.tree_show_element_ids_desc'] = 'Show the IDs in the Elements tree.';
 $_lang['perm.undelete_document_desc'] = 'To undelete any Resource.';
 $_lang['perm.unlock_element_properties_desc'] = 'To be able to edit the default properties for any Element.';
 $_lang['perm.unpublish_desc'] = 'To unpublish any Resource.';
